[package]
name = "RavenVeil"
version = "0.9.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
bytes = "1.5"
chacha20poly1305 = "0.10"
clap = { version = "4.4", features = ["derive", "cargo"] }
etherparse = "0.14.0"
ipnetwork = "0.20"
log = "0.4"
quinn = "0.11.9"
rand_core = { version = "0.6", features = ["getrandom"] }
rcgen = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.5.5"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
#trust-dns-resolver = { version = "0.23", features = ["system-config"] } 
trust-dns-resolver = { version = "0.23", features = ["system-config"] }
url = "2.5"
x25519-dalek = { version = "2.0.0", features = ["static_secrets", "reusable_secrets"] }

# PQC is optional
pqc_kyber = { version = "0.7.1", optional = true, features = ["kyber1024"] }

# Logger dependencies
env_logger = "0.10"
chrono = "0.4"
thiserror = "2.0.16" # Note: Version bump from 1.x to 2.x if needed, but 1.x was "1.0.16" – assuming typo in original
rand = "0.9.2"
sha2 = "0.10.9"
hkdf = "0.12.4"
#rustls = "0.23.32"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "std"] }
rustls-pemfile = "2.2.0"

#TUI Implementation
ratatui = "0.29.0"
crossterm = "0.29.0"

# Dependencies for Linux & macOS ONLY
[target.'cfg(target_os = "linux")'.dependencies]
tokio-tun = "0.15.0"

[target.'cfg(target_os = "macos")'.dependencies]
tun = { version = "0.6.1", features = ["async"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Dependencies for Windows ONLY
[target.'cfg(windows)'.dependencies]
wintun = "0.3.2"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"

[features]
default = []
pqc_kyber = ["dep:pqc_kyber"]
